(fix) Scrollbar issues

--- a/packages/apps/esm-login-app/src/login/login.scss
+++ b/packages/apps/esm-login-app/src/login/login.scss
@@ -167,3 +167,8 @@
   width: 60px;
   height: 40px;
 }
+
+:global(#omrs-top-nav-app-container) {
+  height: 0;
+  overflow: hidden;
+}
